Crash using any Filter when some automasking options are activated. #102436

Closed
opened 2022-11-11 15:49:56 +01:00 by Tonatiuh de San Julián · 6 comments

System Information
Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00

Blender Version
Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-10 19:49, hash: b2000412f2
Also 3.5 alpha.

Short description of error
Blender crashes using filters in sculpt mode, color filter, mesh filter and cloth filter, when this automasking options are activated:

  • Cavity with Custom Curve activated.
  • Cavity (inverted) with Custom Curve activated.
  • View Normal with occlusion activated.

Exact steps for others to reproduce the error
Open a new blender file
Go to sculpt mode
Activate cavity and custom curve or the other automasking options mention above.
Select any filter and try to use them.
You should get a crash.

Cavity and custom curve:

vokoscreenNG-2022-11-11_15-47-19.mov

View Normal with occlusion:

vokoscreenNG-2022-11-11_15-49-04.mov

**System Information** Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.226.00 **Blender Version** Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-10 19:49, hash: `b2000412f2` Also 3.5 alpha. **Short description of error** Blender crashes using filters in sculpt mode, color filter, mesh filter and cloth filter, when this automasking options are activated: - Cavity with Custom Curve activated. - Cavity (inverted) with Custom Curve activated. - View Normal with occlusion activated. **Exact steps for others to reproduce the error** Open a new blender file Go to sculpt mode Activate cavity and custom curve or the other automasking options mention above. Select any filter and try to use them. You should get a crash. Cavity and custom curve: [vokoscreenNG-2022-11-11_15-47-19.mov](https://archive.blender.org/developer/F13891711/vokoscreenNG-2022-11-11_15-47-19.mov) View Normal with occlusion: [vokoscreenNG-2022-11-11_15-49-04.mov](https://archive.blender.org/developer/F13891722/vokoscreenNG-2022-11-11_15-49-04.mov)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

A crash in a new feature isn't high priority?

A crash in a new feature isn't high priority?
Pratik Borhade self-assigned this 2022-11-23 04:20:45 +01:00

This issue was referenced by 959f3cd645

This issue was referenced by 959f3cd6450225a255839396029240f42817e61a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pratik Borhade removed their assignment 2022-11-24 18:02:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102436
No description provided.