Sculpt: fix T102436: missing null pointer check in automasking code